Added dialog in a fragment with a handler for closing

--- a/WebContent/i18n/i18n.properties
+++ b/WebContent/i18n/i18n.properties
@@ -9,3 +9,7 @@ title=\u041D\u0430\u0441\u043B\u043E\u0432 nginx
 
 helloPanelTitle=\u041D\u0430\u0441\u043B\u043E\u0432 \u043D\u0430 \u043F\u0430\u043D\u0435\u043B
 homePageTitle=\u041D\u0430\u0441\u043B\u043E\u0432 \u043D\u0430 \u0441\u0442\u0440\u0430\u043D\u0430
+
+# Dialog
+openDialogButtonText=Say Hello With Dialog
+dialogCloseButtonText=Ok
