Completed: - Aggregation Binding - Data Types - Expression Binding - Custom Formatters

--- a/WebContent/i18n/i18n.properties
+++ b/WebContent/i18n/i18n.properties
@@ -12,4 +12,10 @@ homePageTitle=\u041D\u0430\u0441\u043B\u043E\u0432 \u043D\u0430 \u0441\u0442\u04
 
 # Dialog
 openDialogButtonText=Say Hello With Dialog
-dialogCloseButtonText=Ok
+dialogCloseButtonText=OK
+
+# Invoice List
+invoiceListTitle=Invoices
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
